[charts/redis-ha] Allows changes on command/args/env redis container (#238)
* Allows changes on command/args/env redis container

Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>

* Bumped version

Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>

* Allows custom command/args/env on redis container

Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>

* Bumped version

Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>

* Upgrade kind action

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

---------

Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>
Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -251,9 +251,17 @@ spec:
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         command:
-        - redis-server
+        {{- if .Values.redis.customCommand }}
+{{ toYaml .Values.redis.customCommand | indent 10 }}
+        {{- else }}
+          - redis-server
+        {{- end }}
         args:
-        - /data/conf/redis.conf
+        {{- if .Values.redis.customArgs }}
+{{ toYaml .Values.redis.customArgs | indent 10 }}
+        {{- else }}
+          - /data/conf/redis.conf
+        {{- end }}
         securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         {{- if .Values.auth }}
         env:
@@ -266,6 +274,10 @@ spec:
               name: {{ template "redis-ha.fullname" . }}
             {{- end }}
               key: {{ .Values.authKey }}
+        {{- end }}
+        {{- if .Values.redis.envFrom }}
+        envFrom:
+{{ toYaml .Values.redis.envFrom | indent 10 }}
         {{- end }}
         livenessProbe:
           initialDelaySeconds: {{ .Values.redis.livenessProbe.initialDelaySeconds }}
