--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -156,6 +156,8 @@ haproxy:
       # timeout: 10s
       # Set additional properties for the ServiceMonitor endpoints such as relabeling, scrapeTimeout, tlsConfig, and more.
       endpointAdditionalProperties: {}
+      # for to not check if api has "monitoring.coreos.com/v1"
+      disableAPICheck: false
   init:
     resources: {}
   timeout:
@@ -574,6 +576,8 @@ exporter:
     # timeout: 10s
     # Set additional properties for the ServiceMonitor endpoints such as relabeling, scrapeTimeout, tlsConfig, and more.
     endpointAdditionalProperties: {}
+    # for to not check if api has "monitoring.coreos.com/v1"
+    disableAPICheck: false
 
   # prometheus exporter SCANS redis db which can take some time
   # allow different probe settings to not let container crashloop
