feat: Add ability to define priorityClassName globally
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/redis-ha/templates/redis-haproxy-deployment.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-deployment.yaml
@@ -178,9 +178,9 @@ spec:
 {{- end }}
         lifecycle:
 {{ toYaml .Values.haproxy.lifecycle | indent 10 }}
-{{- if .Values.haproxy.priorityClassName }}
-      priorityClassName: {{ .Values.haproxy.priorityClassName }}
-{{- end }}
+      {{- with .Values.haproxy.priorityClassName | default .Values.global.priorityClassName }}
+      priorityClassName: {{ . }}
+      {{- end }}
       volumes:
 {{- if .Values.haproxy.tls.enabled }}
       - name: pemfile
