--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -520,9 +520,9 @@ spec:
 {{- if .Values.extraContainers }}
 {{- toYaml .Values.extraContainers | nindent 6 }}
 {{- end -}}
-{{- if .Values.priorityClassName }}
+      {{- with .Values.priorityClassName | default .Values.global.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
-{{- end }}
+      {{- end }}
       volumes:
       - name: config
         configMap:
