[stable/redis-ha]: Allow DNS requests to local network
- In some situations (GKE cluster with [Cloud DNS](https://cloud.google.com/kubernetes-engine/docs/how-to/cloud-dns#architecture)), the DNS server is configured on the local network IP range
  (169.254.0.0/16), so we should allow this CIDR in the default network policy.

Signed-off-by: Laurent Lavaud <laurent.lavaud@mirakl.com>

--- a/charts/redis-ha/templates/redis-ha-network-policy.yaml
+++ b/charts/redis-ha/templates/redis-ha-network-policy.yaml
@@ -37,6 +37,8 @@ spec:
           protocol: TCP
     - to:
       - namespaceSelector: {}
+      - ipBlock:
+          cidr: 169.254.0.0/16
       ports:
         - port: 53
           protocol: UDP
