[chart/redis-ha] ha-proxy: opt out of service account mounting #291
Signed-off-by: a-hat <github@andreaskappler.de>

--- a/charts/redis-ha/templates/redis-haproxy-deployment.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-deployment.yaml
@@ -49,6 +49,7 @@ spec:
       {{- else }}
       serviceAccountName: {{ .Values.haproxy.serviceAccountName }}
       {{- end }}
+      automountServiceAccountToken: {{ .Values.haproxy.serviceAccount.automountToken }}
       securityContext: {{ toYaml .Values.haproxy.securityContext | nindent 8 }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
