chore: Update Redis-HA chart version to 4.27.3
Signed-off-by: chikahisa.mikataoe <chikahisa.mikata@rakus.co.jp>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -529,7 +529,7 @@ spec:
 {{- toYaml .Values.extraContainers | nindent 6 }}
 {{- end -}}
       {{- with .Values.priorityClassName | default .Values.global.priorityClassName }}
-      priorityClassName: {{ .Values.priorityClassName }}
+      priorityClassName: {{ . }}
       {{- end }}
       volumes:
       - name: config
