--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -297,6 +297,7 @@ redis:
 
   # liveness probe parameters for redis container
   livenessProbe:
+    enabled: true
     initialDelaySeconds: 30
     periodSeconds: 15
     timeoutSeconds: 15
@@ -304,11 +305,20 @@ redis:
     failureThreshold: 5
 
   readinessProbe:
+    enabled: true
     initialDelaySeconds: 30
     periodSeconds: 15
     timeoutSeconds: 15
     successThreshold: 1
     failureThreshold: 5
+
+  startupProbe:
+    enabled: true
+    initialDelaySeconds: 5
+    periodSeconds: 10
+    timeoutSeconds: 15
+    successThreshold: 1
+    failureThreshold: 3
 
   disableCommands:
     - FLUSHDB
@@ -393,6 +403,7 @@ sentinel:
 
   # liveness probe parameters for sentinel container
   livenessProbe:
+    enabled: true
     initialDelaySeconds: 30
     periodSeconds: 15
     timeoutSeconds: 15
@@ -401,11 +412,20 @@ sentinel:
 
   # readiness probe parameters for sentinel container
   readinessProbe:
+    enabled: true
     initialDelaySeconds: 30
     periodSeconds: 15
     timeoutSeconds: 15
     successThreshold: 3
     failureThreshold: 5
+
+  startupProbe:
+    enabled: true
+    initialDelaySeconds: 5
+    periodSeconds: 10
+    timeoutSeconds: 15
+    successThreshold: 1
+    failureThreshold: 3
 
   quorum: 2
   config:
