--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -105,7 +105,7 @@ spec:
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      securityContext: {{ toYaml .Values.securityContext | nindent 8 }}
+      securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.securityContext "context" $) | nindent 8 }}
       serviceAccountName: {{ template "redis-ha.serviceAccountName" . }}
       automountServiceAccountToken: {{ .Values.serviceAccount.automountToken }}
       initContainers:
@@ -120,12 +120,12 @@ spec:
           mountPath: /host-sys
         {{- end }}
         command: {{ toYaml .Values.sysctlImage.command | nindent 10 }}
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
       {{- end }}
 {{- if and .Values.hostPath.path .Values.hostPath.chown }}
       - name: hostpath-chown
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         command:
         - chown
         - "{{ .Values.containerSecurityContext.runAsUser }}"
@@ -143,7 +143,7 @@ spec:
         - sh
         args:
         - /readonly-config/init.sh
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         env:
 {{- $replicas := int (toString .Values.replicas) -}}
 {{- range $i := until $replicas }}
@@ -231,7 +231,7 @@ spec:
            && if test -s /data/dump.rdb; \
               then cp -v /data/dump.rdb /data/dump.rdb_orig; fi \
            && mv -v /data/dump.rdb_ /data/dump.rdb"
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         envFrom:
         - secretRef:
           {{- if .Values.restore.existingSecret }}
@@ -262,7 +262,7 @@ spec:
         {{- else }}
           - /data/conf/redis.conf
         {{- end }}
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         {{- if .Values.auth }}
         env:
         - name: AUTH
@@ -361,7 +361,7 @@ spec:
         {{- else }}
           - /data/conf/sentinel.conf
         {{- end }}
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
 {{- if or .Values.auth .Values.sentinel.auth}}
         env:
   {{- if .Values.auth }}
@@ -459,7 +459,7 @@ spec:
           - sh
         args:
           - /readonly-config/fix-split-brain.sh
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         env:
 {{- $replicas := int (toString .Values.replicas) -}}
 {{- range $i := until $replicas }}
@@ -509,7 +509,7 @@ spec:
         {{- range $key, $value := .Values.exporter.extraArgs }}
           - --{{ $key }}={{ $value }}
         {{- end }}
-        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
+        securityContext: {{- include "compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 10 }}
         env:
           - name: REDIS_ADDR
           {{- if .Values.exporter.sslEnabled }}
