--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -862,8 +862,8 @@ tls:
   certFile: redis.crt
   # -- Name of key file
   keyFile: redis.key
-  # -- (string) Name of Diffie-Hellman (DH) key exchange parameters file
-  dhParamsFile: ~ # redis.dh
+  # -- (string) Name of Diffie-Hellman (DH) key exchange parameters file (Example: redis.dh)
+  dhParamsFile: ~
   # -- Name of CA certificate file
   caCertFile: ca.crt
 
@@ -881,8 +881,8 @@ restore:
   # -- Set existingSecret to true to use secret specified in existingSecret above
   existingSecret: false
   s3:
-    # -- Restore init container - AWS S3 location of dump - i.e. s3://bucket/dump.rdb
-    source: "" # false
+    # -- Restore init container - AWS S3 location of dump - i.e. s3://bucket/dump.rdb or false
+    source: "" 
     # If using existingSecret, that secret must contain:
     # AWS_SECRET_ACCESS_KEY: <YOUR_ACCESS_KEY:>
     # AWS_ACCESS_KEY_ID: <YOUR_KEY_ID>
@@ -894,8 +894,8 @@ restore:
     # -- Restore init container - AWS AWS_REGION to access restore.s3.source
     region: ""
   ssh:
-    # -- Restore init container - SSH scp location of dump - i.e. user@server:/path/dump.rdb
-    source: "" # false
+    # -- Restore init container - SSH scp location of dump - i.e. user@server:/path/dump.rdb or false
+    source: "" 
     # -- Restore init container - SSH private key to scp restore.ssh.source to init container.
     # Key should be in one line separated with \n.
     # i.e. `-----BEGIN RSA PRIVATE KEY-----\n...\n...\n-----END RSA PRIVATE KEY-----`
