[charts/redis-ha] Add disableAPICheck to skip api checks for servicemonitor (#278)
* Update redis-ha-servicemonitor.yaml

* Update redis-haproxy-servicemonitor.yaml

* Update values.yaml

* Update redis-haproxy-servicemonitor.yaml

* Update README.md

* Update README.md

* Update README.md

* Update Chart.yaml

bump version

* Bringing up to date.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Missed docs on value.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

---------

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>
Co-authored-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -210,6 +210,8 @@ haproxy:
       timeout: ""
       # -- Set additional properties for the ServiceMonitor endpoints such as relabeling, scrapeTimeout, tlsConfig, and more.
       endpointAdditionalProperties: {}
+      # -- Disable API Check on ServiceMonitor
+      disableAPICheck: false
   init:
     # -- Extra init resources
     resources: {}
@@ -762,6 +764,8 @@ exporter:
     timeout: ""
     # -- Set additional properties for the ServiceMonitor endpoints such as relabeling, scrapeTimeout, tlsConfig, and more.
     endpointAdditionalProperties: {}
+    # -- Disable API Check on ServiceMonitor
+    disableAPICheck: false
 
   # prometheus exporter SCANS redis db which can take some time
   # allow different probe settings to not let container crashloop
