Adding nameOverride & fullNameOverride (#301)
* Adding nameOverride & fullNameOverride

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Trim spaces.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

---------

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -18,6 +18,12 @@ image:
   # -- Redis image pull policy
   pullPolicy: IfNotPresent
 
+# -- Full name of the Redis HA Resources
+fullNameOverride: ""
+
+# -- Name override for Redis HA resources
+nameOverride: ""
+
 ## Reference to one or more secrets to be used when pulling images
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 ## This imagePullSecrets is only for redis images
