Temp publish on PR.
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,9 @@ name: Publish Charts to /docs
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches:
+    - master
 
 jobs:
   release:
