redis-ha: minor updates to haproxy and redis_exporter versions
- Updates HAProxy to 3.0.x, which is the latest version of the current LTS branch (2.9 was not and will be EOL 2025-Q1)
- Updates redis_exporter to the latest version; also, the author now publishes official images to quay.io in addition to Docker Hub (see https://github.com/oliver006/redis_exporter/issues/537)

Signed-off-by: Vitaliy <vitaliyf@users.noreply.github.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -127,7 +127,7 @@ haproxy:
     # -- HAProxy Image Repository
     repository: public.ecr.aws/docker/library/haproxy
     # -- HAProxy Image Tag
-    tag: 2.9.4-alpine
+    tag: 3.0.7-alpine
     # -- HAProxy Image PullPolicy
     pullPolicy: IfNotPresent
 
@@ -700,9 +700,9 @@ exporter:
   # -- If `true`, the prometheus exporter sidecar is enabled
   enabled: false
   # -- Exporter image
-  image: oliver006/redis_exporter
+  image: quay.io/oliver006/redis_exporter
   # -- Exporter image tag
-  tag: v1.57.0
+  tag: v1.67.0
   # -- Exporter image pullPolicy
   pullPolicy: IfNotPresent
 
