--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -8,6 +8,7 @@ metadata:
   name: {{ template "redis-ha.fullname" . }}-server
   namespace: {{ .Release.Namespace | quote }}
   labels:
+    {{ template "redis-ha.fullname" . }}: replica
     {{- range $key, $value := .Values.extraLabels }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
