--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,13 +25,11 @@ jobs:
       uses: ludeeus/action-shellcheck@0.1.0
 
     - name: Set up Helm
-      uses: azure/setup-helm@v1
-      with:
-        version: v3.4.0
+      uses: azure/setup-helm@v4.2.0
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v5
       with:
-        python-version: 3.7
+        python-version: '3.13'
 
     - name: Set up chart-testing
       uses: helm/chart-testing-action@v2.0.1
