--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,14 +31,16 @@ jobs:
           done
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
+        id: chart-releaser
+        uses: helm/chart-releaser-action@v1.7.0
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
 
       - name: Run chart-releaser (OCI)
-        uses: bitdeps/helm-oci-charts-releaser@v0.1.0
+        uses: bitdeps/helm-oci-charts-releaser@v0.3.0
         with:
-            oci_registry: ghcr.io/dandydeveloper/charts
-            oci_username: ${{ secrets.USERNAME }}
-            oci_password: ${{ secrets.CR_TOKEN }}
-            github_token: ${{ secrets.CR_TOKEN }}
+          registry: ghcr.io
+          repository: dandydeveloper
+          tag: ${{ steps.chart-releaser.outputs.chart_version }}
+          registry_username: ${{ secrets.USERNAME }}
+          registry_password: ${{ secrets.CR_TOKEN }}
