--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,17 @@ on:
     branches: [ master ]
 
 jobs:
-  release:
+  prepare:
+    runs-on: ubuntu-latest
+
     permissions:
       contents: write
       packages: write
-    runs-on: ubuntu-latest
+
+    outputs:
+      changed_charts: ${{ steps.chart-releaser.outputs.changed_charts }}
+      version: ${{ steps.chart-releaser.outputs.chart_version }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,8 +27,10 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Install Helm
-        uses: azure/setup-helm@v3
+      - name: Set up Helm
+        uses: azure/setup-helm@v4.3.0
+        with:
+          version: v3.12.0
 
       - name: Install Helm Deps
         run: |
@@ -35,12 +43,21 @@ jobs:
         uses: helm/chart-releaser-action@v1.7.0
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
+          CR_GENERATE_RELEASE_NOTES: true
 
-      - name: Run chart-releaser (OCI)
-        uses: appany/helm-oci-chart-releaser@v0.3.0
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3.3.0
         with:
           registry: ghcr.io
-          repository: dandydeveloper
-          tag: ${{ steps.chart-releaser.outputs.chart_version }}
-          registry_username: ${{ secrets.USERNAME }}
-          registry_password: ${{ secrets.CR_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_TOKEN }}
+
+      - name: Push charts to GHCR
+        run: |
+          shopt -s nullglob
+          for pkg in .cr-release-packages/*; do
+            if [ -z "${pkg:-}" ]; then
+              break
+            fi
+            helm push "${pkg}" "oci://ghcr.io/${GITHUB_REPOSITORY_OWNER}/charts"
+          done
