fix: Automount service account token for haproxy (#322)
Closes #322

It's needed by haproxy pods to start, at least when used with Argo CD.

Signed-off-by: Andrii Korotkov <andrii.korotkov@verkada.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -185,7 +185,7 @@ haproxy:
   serviceAccount:
     # -- Specifies whether a ServiceAccount should be created
     create: true
-    automountToken: false
+    automountToken: true
 
   ## Official HAProxy embedded prometheus metrics settings.
   ## Ref: https://github.com/haproxy/haproxy/tree/master/contrib/prometheus-exporter
