--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -141,6 +141,10 @@ haproxy:
 
   # -- HAProxy template annotations
   annotations: {}
+
+  # -- Annotations to be added to the HAProxy deployment pods
+  podAnnotations: {}
+
   # -- HAProxy resources
   resources: {}
   # -- Configuration of `emptyDir`
@@ -476,6 +480,9 @@ redis:
 
   # -- Annotations for the redis statefulset
   annotations: {}
+
+  # -- Annotations to be added to the redis statefulset pods
+  podAnnotations: {}
 
   # -- Update strategy for Redis StatefulSet
   ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
