renamed redis-ha value "fullNameOverride" to "fullnameOverride"
Signed-off-by: Max Gruber <maxgruber19@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -19,7 +19,7 @@ image:
   pullPolicy: IfNotPresent
 
 # -- Full name of the Redis HA Resources
-fullNameOverride: ""
+fullnameOverride: ""
 
 # -- Name override for Redis HA resources
 nameOverride: ""
