Add extraDeploy and annotations for auth secret

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -813,7 +813,8 @@ podDisruptionBudget: {}
 auth: false
 # -- (string) A password that configures a `requirepass` and `masterauth` in the conf parameters (Requires `auth: enabled`)
 redisPassword: ~
-
+# -- Annotations for auth secret
+authSecretAnnotations: {}
 ## Use existing secret containing key `authKey` (ignores redisPassword)
 ## Can also store AWS S3 or SSH secrets in this secret
 # -- An existing secret containing a key defined by `authKey` that configures `requirepass` and `masterauth` in the conf
@@ -1008,3 +1009,6 @@ splitBrainDetection:
   interval: 60
   # -- splitBrainDetection resources
   resources: {}
+
+# Array of extra objects to deploy with the release
+extraDeploy: []
