--- a/charts/redis-ha/templates/redis-auth-secret.yaml
+++ b/charts/redis-ha/templates/redis-auth-secret.yaml
@@ -4,6 +4,9 @@ kind: Secret
 metadata:
   name: {{ template "redis-ha.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
+  {{- with .Values.authSecretAnnotations }}
+  annotations: {{ . | toYaml | nindent 4 }}
+  {{- end }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     {{- range $key, $value := .Values.extraLabels }}
