--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -141,6 +141,10 @@ haproxy:
 
   # -- HAProxy template annotations
   annotations: {}
+
+  # -- HAProxy deployment annotations
+  deploymentAnnotations: {}
+
   # -- HAProxy resources
   resources: {}
   # -- Configuration of `emptyDir`
