Add retry mechanism to splitbrain script
Signed-off-by: Balázs Varga <balazs.varga@strivacity.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -1006,5 +1006,6 @@ networkPolicy:
 splitBrainDetection:
   # -- Interval between redis sentinel and server split brain checks (in seconds)
   interval: 60
+  retryInterval: 10
   # -- splitBrainDetection resources
   resources: {}
