--- a/charts/redis-ha/Chart.yaml
+++ b/charts/redis-ha/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v2
 name: redis-ha
-home: https://redis.io/
+home: http://redis.io/
 keywords:
 - redis
 - keyvalue
 - database
-version: 4.34.3
-appVersion: 8.2.1
+version: 4.33.9
+appVersion: 7.2.7
 description: This Helm chart provides a highly available Redis implementation with a master/slave configuration and uses Sentinel sidecars for failover management
-icon: https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/24/external-redis-an-in-memory-data-structure-project-implementing-a-distributed-logo-shadow-tal-revivo.png
+icon: https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Redis_Logo.svg/1200px-Redis_Logo.svg.png
 maintainers:
 - email: aaron.layfield@gmail.com
   name: dandydeveloper
