--- a/charts/redis-ha/templates/redis-haproxy-network-policy.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-network-policy.yaml
@@ -21,6 +21,7 @@ spec:
     matchLabels:
       release: {{ .Release.Name }}
       app: {{ template "redis-ha.name" . }}-haproxy
+      component: haproxy
   policyTypes:
     - Ingress
     - Egress
