--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -645,6 +645,10 @@ containerSecurityContext:
 # -- Node labels for pod assignment
 nodeSelector: {}
 
+## -- Tolerations for pod assignment
+## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+tolerations: []
+
 # -- Whether the Redis server pods should be forced to run on separate nodes.
 ## This is accomplished by setting their AntiAffinity with requiredDuringSchedulingIgnoredDuringExecution as opposed to preferred.
 ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#inter-pod-affinity-and-anti-affinity-beta-feature
