chore(redis-ha): upgraded test pipeline to use the latest kubernetes supported version
Signed-off-by: Pierluigi Lenoci <pierluigi.lenoci@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kubernetesVersion: ["v1.29.2", "v1.26.14"]
+        kubernetesVersion: ["v1.31.13", "v1.32.9", "v1.33.5", "v1.34.1"]
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/master'
     steps:
