--- a/charts/redis-ha/Chart.yaml
+++ b/charts/redis-ha/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 name: redis-ha
-home: http://redis.io/
+home: https://redis.io/
 keywords:
 - redis
 - keyvalue
 - database
-version: 4.34.2
+version: 4.34.3
 appVersion: 8.2.1
 description: This Helm chart provides a highly available Redis implementation with a master/slave configuration and uses Sentinel sidecars for failover management
 icon: https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/24/external-redis-an-in-memory-data-structure-project-implementing-a-distributed-logo-shadow-tal-revivo.png
