--- a/charts/redis-ha/templates/redis-ha-announce-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-announce-service.yaml
@@ -15,14 +15,14 @@ metadata:
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   annotations:
-{{- if (semverCompare "<=1.10-0" $.Capabilities.KubeVersion.GitVersion) }}
+{{- if (semverCompare "<=1.10-0" $.Capabilities.KubeVersion) }}
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 {{- end }}
   {{- if $root.Values.serviceAnnotations }}
 {{ toYaml $root.Values.serviceAnnotations | indent 4 }}
   {{- end }}
 spec:
-{{- if (semverCompare ">=1.11-0" $.Capabilities.KubeVersion.GitVersion) }}
+{{- if (semverCompare ">=1.11-0" $.Capabilities.KubeVersion) }}
   publishNotReadyAddresses: true
 {{- end }}
   type: ClusterIP
