--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -1014,5 +1014,6 @@ networkPolicy:
 splitBrainDetection:
   # -- Interval between redis sentinel and server split brain checks (in seconds)
   interval: 60
+  retryInterval: 10
   # -- splitBrainDetection resources
   resources: {}
