fix: merge auth and authSecretAnnotations for redis auth secret
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/templates/redis-auth-secret.yaml
+++ b/charts/redis-ha/templates/redis-auth-secret.yaml
@@ -1,10 +1,11 @@
 {{- if and .Values.auth (not .Values.existingSecret) -}}
+{{ $fullAnnotations := mustMerge .Values.redis.annotations .Values.authSecretAnnotations }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "redis-ha.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
-  {{- with .Values.authSecretAnnotations }}
+  {{- with $fullAnnotations }}
   annotations: {{ . | toYaml | nindent 4 }}
   {{- end }}
   labels:
