[stable/redis-ha] Add annotations support for auth secret (#331)
* Add extraDeploy and annotations for auth secret

* fix: merge auth and authSecretAnnotations for redis auth secret

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Updating helm-docs & Removing extraDeploy

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* chore: bump version to 4.34.7 in Chart.yaml

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Fixing README instructions for split-brain

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

---------

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>
Co-authored-by: Ruslan Khizhnyak <rkhizhnyak@ptsecurity.com>
Co-authored-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -819,8 +819,12 @@ podDisruptionBudget: {}
 
 # -- Configures redis with AUTH (requirepass & masterauth conf params)
 auth: false
+
 # -- (string) A password that configures a `requirepass` and `masterauth` in the conf parameters (Requires `auth: enabled`)
 redisPassword: ~
+
+# -- Annotations for auth secret
+authSecretAnnotations: {}
 
 ## Use existing secret containing key `authKey` (ignores redisPassword)
 ## Can also store AWS S3 or SSH secrets in this secret
