feat(redis-ha): update chart version to 4.34.9 and add pod annotations support for HAProxy deployment
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -145,8 +145,12 @@ haproxy:
   # -- HAProxy deployment annotations
   deploymentAnnotations: {}
 
+  # -- Annotations to be added to the HAProxy deployment pods
+  podAnnotations: {}
+
   # -- HAProxy resources
   resources: {}
+
   # -- Configuration of `emptyDir`
   emptyDir: {}
 
